<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:padding="20dp"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusableInTouchMode="true"
    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"



        />

    <TextView
        android:id="@+id/Login_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-26dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"


        android:text="@string/Login_panel"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Email_login"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_below="@+id/Login_panel"
        android:layout_marginTop="2dp"
        android:background="#30ffffff"
        android:hint="@string/Email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:windowSoftInputMode="stateHidden"


        android:textStyle="normal"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"

        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_below="@id/Email_login"
        android:layout_marginTop="18dp"
        android:background="#30ffffff"
        android:hint="@string/Password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:windowSoftInputMode="stateHidden"


        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login"
        >

        <Button

            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_margin="10dp"


            />
        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:layout_margin="10dp"



            />


    </LinearLayout>




</RelativeLayout>