<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:padding="20dp"
    android:background="@drawable/background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"


            />


        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-26dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"


            android:text="@string/Welcome"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/welcome"
            android:background="#30ffffff"


            >


            <TextView
                android:id="@+id/welcome_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/name_layout"
            android:layout_marginTop="12dp"


            android:background="#30ffffff">


            <TextView
                android:id="@+id/welcome_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Email"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"



                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/email_layout"
            android:layout_marginTop="12dp"


            android:background="#30ffffff">


            <TextView
                android:id="@+id/welcome_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Phone"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/phone_layout"
            android:layout_marginTop="12dp"


            android:background="#30ffffff">


            <TextView
                android:id="@+id/welcome_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Gender"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cntry_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/gender_layout"
            android:layout_marginTop="12dp"


            android:background="#30ffffff">


            <TextView
                android:id="@+id/welcome_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cntry_layout"
            android:gravity="center"


            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/Log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Logout"


                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/button_layout"
            android:gravity="center"
            android:padding="30dp"
            >

            <TextView
                android:id="@+id/Deactivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"





                />


        </LinearLayout>


    </RelativeLayout>



</ScrollView>