<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:padding="20dp"
    android:background="@drawable/background"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        >


        <ImageView
            android:id="@+id/logo"
            android:layout_width="355dp"
            android:layout_height="114dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"


            />

        <TextView
            android:id="@+id/signup_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"


            android:text="@string/Signup_panel"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/namelay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/signup_panel"
            >






        <EditText

            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:windowSoftInputMode="stateHidden"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="normal" />

            <ImageView
                android:id="@+id/name_r8"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_beenhere_24"
                android:visibility="gone"



                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_lay"
            android:layout_below="@+id/namelay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">




            <EditText
                android:id="@+id/Email"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_marginTop="23dp"
                android:background="#30ffffff"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="normal"
                android:windowSoftInputMode="stateHidden" />

            <ImageView
                android:id="@+id/email_r8"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_beenhere_24"
                android:layout_marginTop="10dp"
                android:visibility="gone"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_lay"
            android:layout_below="@+id/email_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">







        <EditText
            android:id="@+id/phone"
            android:layout_below="@+id/email_lay"
            android:hint="@string/Phone"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="23dp"
            android:background="#30ffffff"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="normal"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            android:windowSoftInputMode="stateHidden"
            />
            <ImageView
                android:id="@+id/phone_r8"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_beenhere_24"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/gernderLayout"
            android:layout_below="@id/phone_lay"
            android:background="#30ffffff"
            android:layout_marginTop="23dp"
            >


            <TextView
                android:id="@+id/Gender"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Gender"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="normal"

                />
            <RadioGroup
                android:id="@+id/Radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >




                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:textColor="@color/white"
                    android:buttonTint="@color/purple_200"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    />


                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    android:textColor="@color/white"
                    android:buttonTint="@color/purple_200"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textSize="18sp"

                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_layout"
            android:layout_below="@id/gernderLayout"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#30ffffff"
            android:layout_marginTop="23dp"

            >

            <TextView
                android:id="@+id/Country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textColorHint="@color/white"
                android:textSize="20sp"


                android:drawableLeft="@drawable/ic_baseline_language_24" />

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:backgroundTint="@color/white" />









        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/country_layout"
            android:id="@+id/pass_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">




        <EditText
            android:id="@+id/password"

            android:hint="@string/Password"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="23dp"
            android:background="#30ffffff"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="normal"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:inputType="textPassword"
            android:windowSoftInputMode="stateHidden"

            />

            <ImageView
                android:id="@+id/pass_r8"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_beenhere_24"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confrm_lay"
            android:layout_below="@id/pass_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/confirm_password"
                android:hint="@string/Confirm_Password"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_marginTop="23dp"
                android:background="#30ffffff"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="normal"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:inputType="textPassword"
                android:windowSoftInputMode="stateHidden"

                />

            <ImageView
                android:id="@+id/conpass_r8"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_beenhere_24"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

        </LinearLayout>

        <Button
            android:id="@+id/Create_account"
            android:layout_below="@id/confrm_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create_Account"
            android:layout_margin="10dp"



            />





    </RelativeLayout>



</ScrollView>